fix(ITS_RCT): fix text overflow

--- a/src/common/components/Atom/Tag/Tag.module.scss
+++ b/src/common/components/Atom/Tag/Tag.module.scss
@@ -72,6 +72,8 @@
     line-height: var(--spacing-28);
     color: var(--color-content-tag);
     max-width: 160px;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 }
 
